<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:id="@+id/cv">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="6dip"
            android:contentDescription="@string/sleep_logo"
            android:src="@drawable/ic_tent" />


        <TextView
            android:id="@+id/firstLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="true"
            android:layout_toRightOf="@id/icon"
            android:gravity="center_vertical"
            android:text="@string/sleep_log_string"
            android:textSize="12sp"
            android:textColor="@color/md_indigo_500"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/secondLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstLine"
            android:layout_toRightOf="@id/icon"
            android:ellipsize="marquee"
            android:paddingTop="5dp"
            android:text="@string/replay_string"
            android:textColor="@color/md_grey_700"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="true"
            android:layout_toRightOf="@id/firstLine"
            android:gravity="right|center_vertical"
            android:textColor="@color/md_grey_700"
            android:text="@string/timestamp"
            android:textSize="10sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>