<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_grey_100"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:isScrollContainer="false"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/sleep_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/sleep_caption"
                    android:textAllCaps="true"
                    android:textColor="@color/md_blue_grey_700"
                    android:textSize="14sp"
                    android:typeface="monospace" />

                <FrameLayout
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/md_indigo_500"
                    android:elevation="1dp"
                    android:padding="16dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center_horizontal">

                            <TextView
                                android:id="@+id/hours"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="8dp"
                                android:singleLine="true"
                                android:text="@string/default_time"
                                android:textColor="@color/md_white_1000"
                                android:textSize="34sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hours"
                                android:textColor="@color/md_white_1000"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center_horizontal">

                            <TextView
                                android:id="@+id/minutes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="8dp"
                                android:singleLine="true"
                                android:text="@string/default_minutes"
                                android:textColor="@color/md_white_1000"
                                android:textSize="34sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/minutes"
                                android:textColor="@color/md_white_1000"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>


                </FrameLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/md_grey_50"
                    android:elevation="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.appyvet.rangebar.RangeBar xmlns:custom="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/hourbar"
                            android:layout_width="match_parent"
                            android:layout_height="72dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginTop="8dp"
                            android:progress="5"
                            custom:pinMaxFont="10sp"
                            custom:rangeBar="false"
                            custom:rangeBarColor="@color/md_yellow_500"
                            custom:selectorColor="@color/md_pink_500"
                            custom:temporaryPins="false"
                            custom:tickColor="@color/md_yellow_500"
                            custom:tickEnd="10"
                            custom:tickInterval="1"
                            custom:tickStart="0" />


                        <com.appyvet.rangebar.RangeBar xmlns:custom="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/minutebar"
                            android:layout_width="match_parent"
                            android:layout_height="72dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            custom:pinMaxFont="10sp"
                            custom:rangeBar="false"
                            custom:rangeBarColor="@color/md_yellow_500"
                            custom:selectorColor="@color/md_pink_500"
                            custom:temporaryPins="false"
                            custom:tickColor="@color/md_yellow_500"
                            custom:tickEnd="55"
                            custom:tickInterval="5"
                            custom:tickStart="0" />


                        <Button
                            android:id="@+id/calculate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginTop="16dp"
                            android:onClick="sleepdebt"
                            android:paddingBottom="16dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="16dp"
                            android:text="@string/calculate"
                            android:textColor="@color/md_white_1000"
                            android:textSize="14sp"
                            android:typeface="monospace" />
                    </LinearLayout>
                </FrameLayout>


                <TextView
                    android:id="@+id/subcaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="32dp"
                    android:paddingBottom="100dp"
                    android:text="@string/sub_caption"
                    android:textColor="@color/md_blue_grey_800"
                    android:textSize="14sp" />


            </LinearLayout>

        </ScrollView>

        <FrameLayout
            android:id="@+id/shadowView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_grey_200">

            <com.getbase.floatingactionbutton.FloatingActionsMenu
                android:id="@+id/add_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="16dp"
                fab:fab_addButtonColorNormal="@color/pink"
                fab:fab_addButtonColorPressed="@color/md_pink_700"
                fab:fab_addButtonPlusIconColor="@android:color/white"
                fab:fab_labelStyle="@style/menu_labels_style"
                fab:fab_labelsPosition="left">

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="helpFunction"
                    fab:fab_colorNormal="@color/md_deep_orange_400"
                    fab:fab_colorPressed="@color/md_deep_orange_500"
                    fab:fab_icon="@drawable/ic_school_white_24dp"
                    fab:fab_title="Help" />

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="settingsFunction"
                    fab:fab_colorNormal="@color/md_blue_500"
                    fab:fab_colorPressed="@color/md_blue_600"
                    fab:fab_icon="@drawable/ic_settings_white_24dp"
                    fab:fab_title="Settings" />


            </com.getbase.floatingactionbutton.FloatingActionsMenu>
        </FrameLayout>


    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:itemBackground="@drawable/drawer_item"
        app:itemIconTint="#333"
        app:itemTextColor="#333"
        app:menu="@menu/navigation_drawer_items" />


</android.support.v4.widget.DrawerLayout>